--- a/src/App.css
+++ b/src/App.css
@@ -152,28 +152,29 @@ html, body {
 }
 
 .main {
-  margin-bottom: 20px;
+  margin-bottom: 120px;
 }
-
-/* 
- footer {
-  height: 100px;
-  position: fixed;
-  z-index: 1;
-  bottom: 25px;
-  background: white;
-  width: 1000px;
-  left: 50%;
-  margin-left: -500px;
-  box-shadow: 0px -5px 4px -6px;
-  border-radius: 15px;
-  padding: 20px;
-  box-shadow: 0 2px 14px rgb(0 0 0 / 25%);
-  box-sizing: border-box;
-} 
-*/
 
 
 .hidden {
   display: none;
+}
+
+.purchase-dialog {
+  opacity: 1;
+  width: 400px;
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  translate: -50%;
+  transform: translateX(-50%);
+  box-shadow: rgb(0 0 0 / 25%) 0px 54px 55px, rgb(0 0 0 / 12%) 0px -12px 30px, rgb(0 0 0 / 12%) 0px 4px 6px, rgb(0 0 0 / 17%) 0px 12px 13px, rgb(0 0 0 / 9%) 0px -3px 5px;
+    border-radius: 14px;
+
+  transition: bottom 1s, opacity 1s;
+}
+
+.purchase-dialog.hidden {
+  bottom: -250px;
+  opacity: 0;
 }
